mostly-finished but broken collision bindings lmao

--- a/Mystic/Mystic.csproj
+++ b/Mystic/Mystic.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Chroma" Version="0.37.0" />
+    <PackageReference Include="Chroma" Version="0.40.1" />
+    <PackageReference Include="EasingSharp" Version="0.0.21" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +18,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\sprites\statusRed.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="cute_c2.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
