--- a/Mystic/Mystic.csproj
+++ b/Mystic/Mystic.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>false</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Chroma" Version="0.40.1" />
     <PackageReference Include="EasingSharp" Version="0.0.21" />
